--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,9 +8,9 @@ door.port=8000
 door.sn=CA-3220T27010046
 
 #Server Port,Two-dimensional code scanner machine need this port
-door.httpServerPort=8081
+door.httpServerPort=6000
 
 #weifa's ip
-weifa.ip=localhost
+weifa.ip=222.90.70.92
 #weifa's Port
-weifa.port=8080
+weifa.port=9095
