Add:change to tcp

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,7 @@ door.port=8000
 door.sn=CA-3220T27010046
 
 #Server Port,Two-dimensional code scanner machine need this port
-door.httpServerPort=6000
+door.tcpServerPort=6000
 
 #weifa's ip
 weifa.ip=222.90.70.92
