Add:change to tcp

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,25 @@
 server.port=8080
 
 #Door's IP
-door.ip=192.168.0.150
+door.device[0].id=1
+door.device[0].ip=192.168.0.150
 #Door's Port
-door.port=8000
+door.device[0].port=8000
 #Door's SN
-door.sn=CA-3220T27010046
+door.device[0].sn=CA-3220T27010046
+
+#Door's IP
+door.device[1].id=2
+door.device[1].ip=192.168.0.151
+#Door's Port
+door.device[1].port=8000
+#Door's SN
+door.device[1].sn=CA-3220T27010047
 
 #Server Port,Two-dimensional code scanner machine need this port
 door.tcpServerPort=6000
 
 #weifa's ip
-weifa.ip=222.90.70.92
+door.weifaIP=222.90.70.92
 #weifa's Port
-weifa.port=9095
+door.weifaPort=9095
